--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,6 @@
     <string name="title_show_invitations">My Invitations</string>
     <string name="drawer_second_subheading">Profile</string>
     <string name="title_activity_show_invitations">ShowInvitations</string>
+    <string name="title_activity_profile">Profile</string>
+    <string name="title_show_profile">Profile</string>
 </resources>
