--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title" translatable="false">Lunch Invite</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Change Notification Time</string>
     <string name="title_activity_login">Sign in</string>
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
@@ -22,87 +23,25 @@
     <string name="input_date">Date</string>
     <string name="input_time">Time</string>
     <string name="input_participants">Participants</string>
-    <string name="title_activity_settings">Settings</string>
-
-    <!-- Strings related to Settings -->
-
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
-
-    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <string-array name="multi_select_list_preference_default_value" />
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="title_activity_settings">Change Notification Time</string>
     <string name="nav_header_subtitle">Make easy lunch-appointments!</string>
 
     <string name="title_show_invitations">My Invitations</string>
-    <string name="drawer_second_subheading">Profile</string>
+    <string name="drawer_second_subheading">Home</string>
     <string name="title_activity_show_invitations">My Invitations</string>
     <string name="title_activity_profile">Profile</string>
-    <string name="title_show_profile">Profile</string>
+    <string name="title_show_profile">Home</string>
     <string name="info_delete">To delete entries, just swipe one item away.</string>
     <string name="info_alert">To set alerts, just tap on one item.</string>
-    <string name="title_activity_settings2">SettingsActivity2</string>
+    <string name="pref_title_vibrate" translatable="false">unused</string>
+    <string name="pref_ringtone_silent" translatable="false">unused</string>
+    <string name="pref_title_ringtone" translatable="false">unused</string>
+    <string name="pref_title_new_message_notifications" translatable="false">unused</string>
+    <string name="pref_header_notifications" translatable="false">unused</string>
+    <string name="pref_title_system_sync_settings" translatable="false">unused</string>
+    <string name="pref_title_sync_frequency" translatable="false">unused</string>
+    <string name="pref_default_display_name" translatable="false">unused</string>
+    <string name="pref_header_general" translatable="false">unused</string>
+    <string name="pref_title_display_name" translatable="false">unused</string>
+    <string name="pref_title_add_friends_to_messages" translatable="false">unused</string>
 </resources>
